--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="lijst">
+    <!-- <div class="lijst">
         <li class="lijst-item">link1</li>
         <li class="lijst-item">link2</li>
         <li class="lijst-item">link3</li>
         <li class="lijst-item">link4</li>
         <li class="lijst-item">link5</li>
-    </div>
+    </div> -->
+
+    <input type="text"  class="input" placeholder="Your name">
+    <button class="btn">click</button>
+    <p class="output"></p>
     <script src="/javascrpit/main.js"></script>
 </body>
 </html>
